component-library/components/sections/hero/hero.scss
.c-hero {
  $c: &;
  height: calc(100svh - 60px); //60px is the height of the header
  display: grid;
  grid-template-columns: var(--twelve-column-grid);
  grid-template-rows: minmax(0, 1fr);
  color: var(--brand-grey-000, #f9f9fb);
  background: var(--brand-grey-900, #1b1b1d);
  &__cover {
    background-color: var(--header-color, rgba(27, 27, 29, 1));
    grid-row: 1 / -1;
    grid-column: 1 / -1;
  }
  & .c-image,
  .c-image--live-editing,
  picture {
    grid-row: 1 / -1;
    grid-column: 1 / -1;
    height: 100%;
    width: 100%;
    object-fit: cover;
    object-position: 50% 50%;
  }
  &__content {
    display: grid;
    gap: 1.5rem;
    grid-row: 1 / -1;
    grid-column: 2 / -2;
    align-self: center;
    .c-component-heading__primary_heading {
      text-wrap: pretty;
      max-width: 20ch;
    }
    .c-text-block {
      text-wrap: balance;
      max-width: 60ch; //recommended characters per line
    }
  }
  &--left-right-variant {
    grid-template-rows: auto minmax(0, 1fr);
    row-gap: 3rem;
    #{$c}__content {
      margin-top: 3rem;
      grid-row: 1 / 2;
      border-left: solid 2px;
      padding-left: 1.5rem;
    }
    #{$c}__cover {
      grid-row: 2 / 3;
    }
    & .c-image,
    .c-image--live-editing,
    picture {
      grid-row: 2 / 3;
      // grid-column: 1 / -1;
    }

    @media screen and (min-width: 768px) {
      height: calc(100svh - 120px); //120px is the height of the header
    }

    @media screen and (min-width: 1023px) {
      grid-template-rows: unset;
      #{$c}__content {
        grid-row: 1 / 2;
        grid-column: 2 / 8;
      }
      #{$c}__cover {
        grid-column: 9 / -1;
        grid-row: 1 / 2;
      }
      & .c-image,
      .c-image--live-editing,
      picture {
        grid-column: 9 / -1;
        grid-row: 1 / 2;
      }
    }
  }
}

